compiler/tools/fpp-check/test/port_instance/undef_telemetry.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/port_instance/undef_telemetry.fpp:3.3
  telemetry port tlmOut
  ^
error: symbol Fw is not defined
note: looking for a port here
note: the symbol Fw.Tlm has an implied use at the point of the error
